<resources>
    <string name="app_name">Flora</string>
    <string name="nombre">Nombre</string>
    <string name="appBarImage">App Bar Image</string>
    <string name="fabAddFlora">Abre AddFloraActivity</string>
    <string name="fabAddImage">Abre AddImagenActivity</string>
    <string name="tvAñadirFlora">AÑADE FLORA</string>
    <string name="tvEditarFlora">EDITA FLORA</string>
    <string name="tvAñadirImagen">AÑADE IMAGEN</string>
    <string name="btAñadir">Añadir</string>
    <string name="btEditar">Editar</string>
    <string name="btBorrar">Borrar</string>
    <string name="btCancelar">Cancelar</string>
    <string name="btSeleccionaImagen">Selecciona Imagen</string>
    <string name="etNombre">Introduce un nombre</string>
    <string name="etFamilia">Introduce una familia</string>
    <string name="etIdentificacion">Introduce una identificacion</string>
    <string name="etAltitud">Introduce una altitud</string>
    <string name="etHabitat">Introduce un habitat</string>
    <string name="etFitosociologia">Introduce una fitosociologia</string>
    <string name="etBiotipo">Introduce un biotipo</string>
    <string name="etBiologiaReproductiva">Introduce una biologia reproductiva</string>
    <string name="etFloracion">Introduce una floracion</string>
    <string name="etFructificacion">Introduce una fructificacion</string>
    <string name="etExpresionSexual">Introduce una expresion sexual</string>
    <string name="etPolinizacion">Introduce una polinizacion</string>
    <string name="etDispersion">Introduce una dispersion</string>
    <string name="etNumeroCromosomatico">Introduce el numero cromosomatico</string>
    <string name="etReproduccionAsexual">¿Se reproduce asexualmente?</string>
    <string name="etDistribucion">Introduce una distribucion</string>
    <string name="etBiologia">Introduce una biologia</string>
    <string name="etDemografia">Introduce una demografia</string>
    <string name="etAmenazas">Introduce las amenazas</string>
    <string name="etMedidasPropuestas">Introduce las medidas propuestas</string>
    <string name="etNombre2">Introduce el nombre de la imagen</string>
    <string name="etDescripcion">Introduce una descripcion</string>
    <string name="ivFlora">Imagen de la flora</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvFamilia">Familia</string>
    <string name="tvId">Id</string>

</resources>